<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath />
    </parent>

    <groupId>io.github.loicgreffier</groupId>
    <artifactId>spring-boot-kafka-quickstarts</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>spring-boot-kafka-quickstarts</name>
    <description>Code samples around Spring Boot and Kafka</description>

    <modules>
        <module>kafka-consumer-quickstarts</module>
        <module>kafka-producer-quickstarts</module>
        <module>kafka-streams-quickstarts</module>
    </modules>

    <properties>
        <avro.version>1.12.0</avro.version>
        <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
        <java.version>21</java.version>
        <jib-maven-plugin.version>3.4.6</jib-maven-plugin.version>
        <kafka-avro-serializer.version>8.0.0</kafka-avro-serializer.version>
        <kafka-streams-avro-serde.version>8.0.0</kafka-streams-avro-serde.version>
        <kafka.version>4.0.0</kafka.version>
        <lombok.version>1.18.38</lombok.version>
        <palantir.version>2.58.0</palantir.version>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>loicgreffier</sonar.organization>
        <sonar.projectKey>loicgreffier_spring-boot-kafka-quickstarts</sonar.projectKey>
        <spotless-maven-plugin.version>2.45.0</spotless-maven-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.avro</groupId>
                    <artifactId>avro-maven-plugin</artifactId>
                    <version>${avro.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>schema</goal>
                            </goals>
                            <phase>generate-sources</phase>
                            <configuration>
                                <stringType>String</stringType>
                                <enableDecimalLogicalType>true</enableDecimalLogicalType>
                                <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
                                <outputDirectory>${project.basedir}/target/generated-sources</outputDirectory>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                        <palantirJavaFormat>
                            <version>${palantir.version}</version>
                            <style>PALANTIR</style>
                            <formatJavadoc>true</formatJavadoc>
                        </palantirJavaFormat>
                        <removeUnusedImports />
                        <formatAnnotations />
                        <importOrder />
                        <trimTrailingWhitespace />
                        <endWithNewline />
                        <licenseHeader>
                            <file>${maven.multiModuleProjectDirectory}/.spotless/HEADER</file>
                        </licenseHeader>
                    </java>
                    <pom>
                        <includes>
                            <include>pom.xml</include>
                        </includes>
                        <sortPom>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <expandEmptyElements>false</expandEmptyElements>
                            <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
                            <sortDependencies>groupId,artifactId</sortDependencies>
                            <sortDependencyManagement>groupId,artifactId</sortDependencyManagement>
                            <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
                            <sortPlugins>groupId,artifactId</sortPlugins>
                            <sortProperties>true</sortProperties>
                            <sortModules>true</sortModules>
                            <endWithNewline />
                        </sortPom>
                    </pom>
                    <yaml>
                        <includes>
                            <include>src/main/resources/*.yml</include>
                            <include>src/test/resources/*.yml</include>
                        </includes>
                        <jackson>
                            <features>
                                <ORDER_MAP_ENTRIES_BY_KEYS>true</ORDER_MAP_ENTRIES_BY_KEYS>
                            </features>
                            <yamlFeatures>
                                <WRITE_DOC_START_MARKER>false</WRITE_DOC_START_MARKER>
                            </yamlFeatures>
                        </jackson>
                    </yaml>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <from>
                        <image>eclipse-temurin:21-jre</image>
                    </from>
                    <to>
                        <image>docker.io/loicgreffier/spring-boot-kafka-quickstarts:${project.artifactId}-${project.version}</image>
                    </to>
                    <container>
                        <ports>
                            <port>8080</port>
                        </ports>
                    </container>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>prepare-package</phase>
                    </execution>

                    <execution>
                        <id>post-unit-test</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <!-- Sets the path to the file which contains the execution data. -->
                            <dataFile>target/jacoco.exec</dataFile>
                            <!-- Sets the output directory for the code coverage report. -->
                            <outputDirectory>target/jacoco-ut</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
